--- a/public/iframe-form.html
+++ b/public/iframe-form.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+git<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,58 +23,9 @@
             max-width: 100%;
         }
 
-        .ws_qt_form_progress {
-            margin-bottom: 24px;
-        }
-
         .ws_qt_container {
             max-width: 600px;
             margin: 0 auto;
-        }
-
-        .ws_qt_form_progress_steps {
-            list-style: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
-            margin: 0;
-            padding: 0;
-        }
-
-        .ws_qt_form_progress_steps li {
-            position: relative;
-        }
-
-        .ws_qt_form_progress_steps li a {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background-color: #e5e7eb;
-            color: #6b7280;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 16px;
-            transition: all 0.3s ease;
-        }
-
-        .ws_qt_form_progress_steps li.is-current a {
-            background-color: #0FB8C1;
-            color: white;
-        }
-
-        .ws_qt_form_progress_steps li:not(:last-child)::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            right: -30px;
-            width: 20px;
-            height: 2px;
-            background-color: #e5e7eb;
-            transform: translateY(-50%);
         }
 
         .ws_qt_step_1_container {
@@ -82,7 +33,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
             padding: 24px;
-            margin-top: 20px;
+            margin-top: 0;
         }
 
         .ws_qt_caption {
@@ -217,25 +168,6 @@
 </head>
 <body>
     <div class="quotation_form_wrapper">
-        <div class="ws_qt_form_progress space-btm-md">
-            <div class="ws_qt_container">
-                <ul class="ws_qt_form_progress_steps">
-                    <li class="is-current">
-                        <a href="#">1</a>
-                    </li>
-                    <li class="">
-                        <a href="#">2</a>
-                    </li>
-                    <li class="">
-                        <a href="#">3</a>
-                    </li>
-                    <li class="">
-                        <a href="#">4</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
         <div class="ws_qt_container">
             <div class="ws_qt_step_1_container" style="border: 0;">
                 <div class="ws_qt_caption">
