--- a/public/iframe-form.html
+++ b/public/iframe-form.html
@@ -16,31 +16,39 @@ git<!DOCTYPE html>
             background-color: #ffffff;
             color: #333;
             line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
         }
 
         .quotation_form_wrapper {
-            padding: 10px;
-            max-width: 100%;
+            padding: 0;
+            width: 100%;
+            margin: 0;
+            box-sizing: border-box;
         }
 
         .ws_qt_container {
-            max-width: 600px;
-            margin: 0 auto;
+            width: 100%;
+            margin: 0;
+            padding: 0;
         }
 
         .ws_qt_step_1_container {
             background: white;
             border-radius: 8px;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-            padding: 24px;
-            margin-top: 0;
+            padding: 25px 24px 28px 24px;
+            margin: 0;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .ws_qt_form_step_1 {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 16px;
-            margin-bottom: 16px;
+            gap: 0;
+            margin-bottom: 20px;
         }
 
         @media (max-width: 640px) {
@@ -50,47 +58,66 @@ git<!DOCTYPE html>
         }
 
         .form-group {
-            margin-bottom: 16px;
+            margin-bottom: 0;
         }
 
         .form-group label {
             display: block;
-            font-size: 12px;
+            font-size: 11px;
             font-weight: 600;
-            color: #374151;
-            margin-bottom: 4px;
+            color: #9ca3af;
+            margin-bottom: 8px;
             text-transform: uppercase;
             letter-spacing: 0.05em;
+            padding-left: 16px;
         }
 
         .form-control {
             width: 100%;
-            padding: 12px;
+            padding: 20px 16px;
             border: 1px solid #d1d5db;
-            border-radius: 6px;
+            border-radius: 0;
             font-size: 16px;
             transition: all 0.3s ease;
             background-color: white;
+            box-sizing: border-box;
+            height: 60px;
+        }
+
+        .form-group:first-child .form-control {
+            border-top-left-radius: 12px;
+            border-bottom-left-radius: 12px;
+            border-right: 0.5px solid #d1d5db;
+        }
+
+        .form-group:last-child .form-control {
+            border-top-right-radius: 12px;
+            border-bottom-right-radius: 12px;
+            border-left: 0.5px solid #d1d5db;
         }
 
         .form-control:focus {
             outline: none;
             border-color: #0FB8C1;
             box-shadow: 0 0 0 3px rgba(15, 184, 193, 0.1);
+            z-index: 2;
+            position: relative;
         }
 
         .form-control::placeholder {
-            color: #9ca3af;
+            color: #d1d5db;
+            font-size: 16px;
         }
 
         .car-details-link {
             display: block;
             text-align: center;
-            color: #6b7280;
+            color: #374151;
             font-size: 14px;
             text-decoration: underline;
-            margin-bottom: 20px;
+            margin-bottom: 25px;
             cursor: pointer;
+            font-weight: 500;
         }
 
         .car-details-link:hover {
@@ -105,14 +132,17 @@ git<!DOCTYPE html>
             background-color: #0FB8C1;
             color: white;
             border: none;
-            padding: 16px 32px;
+            padding: 18px 32px;
             border-radius: 50px;
             font-size: 18px;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
             width: 100%;
-            max-width: 200px;
+            height: 56px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .btn-green-filled:hover {
@@ -168,7 +198,7 @@ git<!DOCTYPE html>
 
                         <!-- VEHICLE LOCATION FIELD -->
                         <div class="form-group ws-error-validation">
-                            <label for="location">POSTCODE</label>
+                            <label for="location">LOCATION</label>
                             <input
                                 name="location"
                                 type="text"
