--- a/public/iframe-form.html
+++ b/public/iframe-form.html
@@ -38,7 +38,7 @@ git<!DOCTYPE html>
             background: white;
             border-radius: 8px;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-            padding: 25px 24px 28px 24px;
+            padding: 20px;
             margin: 0;
             width: 100%;
             box-sizing: border-box;
@@ -47,8 +47,8 @@ git<!DOCTYPE html>
         .ws_qt_form_step_1 {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 0;
-            margin-bottom: 20px;
+            gap: 16px;
+            margin-bottom: 16px;
         }
 
         @media (max-width: 640px) {
@@ -58,66 +58,47 @@ git<!DOCTYPE html>
         }
 
         .form-group {
-            margin-bottom: 0;
+            margin-bottom: 16px;
         }
 
         .form-group label {
             display: block;
-            font-size: 11px;
+            font-size: 12px;
             font-weight: 600;
-            color: #9ca3af;
-            margin-bottom: 8px;
+            color: #374151;
+            margin-bottom: 4px;
             text-transform: uppercase;
             letter-spacing: 0.05em;
-            padding-left: 16px;
         }
 
         .form-control {
             width: 100%;
-            padding: 20px 16px;
+            padding: 12px;
             border: 1px solid #d1d5db;
-            border-radius: 0;
+            border-radius: 6px;
             font-size: 16px;
             transition: all 0.3s ease;
             background-color: white;
-            box-sizing: border-box;
-            height: 60px;
-        }
-
-        .form-group:first-child .form-control {
-            border-top-left-radius: 12px;
-            border-bottom-left-radius: 12px;
-            border-right: 0.5px solid #d1d5db;
-        }
-
-        .form-group:last-child .form-control {
-            border-top-right-radius: 12px;
-            border-bottom-right-radius: 12px;
-            border-left: 0.5px solid #d1d5db;
         }
 
         .form-control:focus {
             outline: none;
             border-color: #0FB8C1;
             box-shadow: 0 0 0 3px rgba(15, 184, 193, 0.1);
-            z-index: 2;
-            position: relative;
         }
 
         .form-control::placeholder {
-            color: #d1d5db;
-            font-size: 16px;
+            color: #9ca3af;
         }
 
         .car-details-link {
             display: block;
             text-align: center;
-            color: #374151;
+            color: #6b7280;
             font-size: 14px;
             text-decoration: underline;
-            margin-bottom: 25px;
+            margin-bottom: 20px;
             cursor: pointer;
-            font-weight: 500;
         }
 
         .car-details-link:hover {
@@ -132,17 +113,14 @@ git<!DOCTYPE html>
             background-color: #0FB8C1;
             color: white;
             border: none;
-            padding: 18px 32px;
+            padding: 16px 32px;
             border-radius: 50px;
             font-size: 18px;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
             width: 100%;
-            height: 56px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            max-width: 200px;
         }
 
         .btn-green-filled:hover {
@@ -198,7 +176,7 @@ git<!DOCTYPE html>
 
                         <!-- VEHICLE LOCATION FIELD -->
                         <div class="form-group ws-error-validation">
-                            <label for="location">LOCATION</label>
+                            <label for="location">POSTCODE</label>
                             <input
                                 name="location"
                                 type="text"
