--- a/public/iframe-form.html
+++ b/public/iframe-form.html
@@ -1,4 +1,4 @@
-git<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,52 +13,63 @@ git<!DOCTYPE html>
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
-            background-color: #ffffff;
+            background-color: #f8f9fa;
             color: #333;
             line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden;
         }
 
         .quotation_form_wrapper {
-            padding: 0;
-            width: 100%;
-            margin: 0;
-            box-sizing: border-box;
+            padding: 20px;
+            max-width: 100%;
         }
 
         .ws_qt_container {
-            width: 100%;
-            margin: 0;
-            padding: 0;
+            max-width: 600px;
+            margin: 0 auto;
         }
 
         .ws_qt_step_1_container {
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin: 0;
-            width: 100%;
-            box-sizing: border-box;
+            background: transparent;
+            padding: 0;
+            margin-top: 0;
         }
 
         .ws_qt_form_step_1 {
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            padding: 24px;
+            margin-bottom: 24px;
+            transition: all 0.3s ease;
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 16px;
-            margin-bottom: 16px;
+            gap: 20px;
+        }
+
+        .ws_qt_form_step_1:hover {
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+            transform: translateY(-2px);
         }
 
         @media (max-width: 640px) {
             .ws_qt_form_step_1 {
                 grid-template-columns: 1fr;
+                gap: 16px;
             }
         }
 
         .form-group {
-            margin-bottom: 16px;
+            background: transparent;
+            border-radius: 0;
+            box-shadow: none;
+            padding: 0;
+            margin-bottom: 0;
+            transition: none;
+        }
+
+        .form-group:hover {
+            box-shadow: none;
+            transform: none;
         }
 
         .form-group label {
@@ -91,45 +102,37 @@ git<!DOCTYPE html>
             color: #9ca3af;
         }
 
-        .car-details-link {
-            display: block;
-            text-align: center;
-            color: #6b7280;
-            font-size: 14px;
-            text-decoration: underline;
-            margin-bottom: 20px;
-            cursor: pointer;
-        }
 
-        .car-details-link:hover {
-            color: #0FB8C1;
-        }
 
         .ws-align-center {
             text-align: center;
+            padding: 0;
         }
 
         .btn-green-filled {
             background-color: #0FB8C1;
             color: white;
             border: none;
-            padding: 16px 32px;
+            padding: 16px 48px;
             border-radius: 50px;
             font-size: 18px;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
             width: 100%;
-            max-width: 200px;
+            max-width: 400px;
+            box-shadow: 0 2px 8px rgba(15, 184, 193, 0.3);
         }
 
         .btn-green-filled:hover {
             background-color: #0DA6AE;
-            transform: translateY(-1px);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 16px rgba(15, 184, 193, 0.4);
         }
 
         .btn-green-filled:active {
             transform: translateY(0);
+            box-shadow: 0 2px 8px rgba(15, 184, 193, 0.3);
         }
 
         .error-message {
@@ -157,44 +160,27 @@ git<!DOCTYPE html>
     <div class="quotation_form_wrapper">
         <div class="ws_qt_container">
             <div class="ws_qt_step_1_container" style="border: 0;">
-                <form name="quoteForm" id="quoteForm" method="post">
+                <form name="quoteForm" id="quoteForm" method="post" action="/request-a-quote/">
                     <div id="error-container"></div>
                     <div id="success-container"></div>
                     
                     <div class="ws_qt_form_step_1">
-                        <!-- VEHICLE REGISTRATION FIELD -->
+                        <!-- // VEHICLE REGISTRATION FIELD -->
                         <div class="form-group ws-error-validation">
-                            <label for="vehicle_registration">VEHICLE REGISTRATION</label>
-                            <input
-                                name="vehicle_registration"
-                                type="text"
-                                id="vehicle_registration"
-                                class="form-control inputclass required"
-                                placeholder="Enter Number Plate"
-                            />
+                            <label for="number_plate">VEHICLE REGISTRATION</label>
+                            <input name="vehicle_registration" type="text" id="vehicle_registration" class="form-control inputclass required" placeholder="Enter Number Plate">
                         </div>
 
-                        <!-- VEHICLE LOCATION FIELD -->
+                        <!-- // VEHICLE LOCATION FIELD -->
                         <div class="form-group ws-error-validation">
-                            <label for="location">POSTCODE</label>
-                            <input
-                                name="location"
-                                type="text"
-                                id="location"
-                                class="form-control inputclass required"
-                                placeholder="Enter Postcode"
-                            />
+                            <label for="location">LOCATION</label>
+                            <input name="location" type="text" id="location" class="form-control inputclass required" placeholder="Enter Postcode">
                         </div>
                     </div>
 
-                    <!-- LINK TO SEARCH CAR MANUALLY -->
-                    <a class="car-details-link" href="#" onclick="handleManualEntry()">
-                        Not sure? Enter car details manually
-                    </a>
-                    
-                    <!-- LET'S GO BUTTON -->
+                    <!-- // LET'S GO BUTTON -->
                     <div class="ws-align-center">
-                        <input type="submit" class="btn-green-filled go_btn submit-btn" value="Let's Go" />
+                        <input type="submit" class="btn-green-filled go_btn submit-btn" value="Let's Go">
                     </div>
                 </form>
             </div>
@@ -280,16 +266,7 @@ git<!DOCTYPE html>
             }
         });
 
-        function handleManualEntry() {
-            if (window.parent !== window) {
-                window.parent.postMessage({
-                    type: 'WINDSCREEN_MANUAL_ENTRY',
-                    data: {}
-                }, '*');
-            } else {
-                window.open('https://winc-customer.vercel.app/damage-location', '_blank');
-            }
-        }
+
 
         // Auto-format vehicle registration
         document.getElementById('vehicle_registration').addEventListener('input', function(e) {
