--- a/public/iframe-form.html
+++ b/public/iframe-form.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
-            background-color: #f8f9fa;
+            background-color: transparent;
             color: #333;
             line-height: 1.6;
         }
